[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Treskun4eg <wagamamanowelli@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games_1:main"

[coverage:run]
branch = True

[flake8]
accept-encodings = utf-8
max-complexity = 6
statistics = False
max-line-length = 80
doctests = True
enable-extensions = G
isort-show-traceback = True

# clean default ignore list
ignore =

per-file-ignores =
  # it is possibble to have prints in scripts
  hexlet_python_package/scripts/*.py: WPS421

[tool:pytest]
norecursedirs = __pycache__
addopts = --strict-markers

[isort]
# See https://github.com/timothycrosley/isort#multi-line-output-modes
multi_line_output = 3
include_trailing_comma = true
default_section = FIRSTPARTY
# Should be: 80 - 1
line_length = 79